--- a/Content/Scientific/Participants-html.tex
+++ b/Content/Scientific/Participants-html.tex
@@ -1,75 +1,3 @@
-<!DOCTYPE html>
-<html lang='en'>
-
-<head>
-<base href="../..">
-<title>Operator Theory and Approximation 2024</title>
-<link rel="stylesheet" type="text/css" media="all" href="Styles/main.css"/>
-<link rel="stylesheet" type="text/css" media="all" href="Styles/navigation.css"/>
-</head>
-
-<body>
-
-<!---   PAGE HEADING   -------------------------->
-
-<object data="Templates/header.html" 
-        type="text/html" width="1100" height="280"
-        style="overflow:hidden; width: 1100px; height: 280px"></object>
-
-<!---   NAVIGATION   ------------------------------>
-
-<table class="navigation">
-<tr>
-<td class="navigation">
-	<a href="index.html">Home</a>
-</td>
-<td class="navigation">
-	<a href="Content/keydates.html">Key<br>Dates</a>
-</td>
-<td class="navigation">
-	<div class="dropdown">
-	<button class="dropbtn-current">Scientific</button>
-	<div class="dropdown-content">
-	<a href="Content/Scientific/program.html">Program</a>
-	<a href="Content/Scientific/participants.html">Participants</a>
-	<a href="Content/Scientific/talks.html">Talks</a>
-	</div>
-	</div>
-</td>
-<td class="navigation">
-	<a href="Content/registration.html">Registration</a>
-</td>
-<td class="navigation">
-	<a href="Content/abstract-submission.html">Abstract<br>submission</a>
-</td>
-<td class="navigation">
-	<div class="dropdown">
-	<button class="dropbtn">Venue</button>
-	<div class="dropdown-content">
-	<a href="Content/Venue/travel.html">Travel</a>
-	<a href="Content/Venue/accommodation.html">Accomodation</a>
-	<a href="Content/Venue/public-transport.html">Public transport in Vienna</a>
-	<a href="Content/Venue/directions.html">Direction at the TU Wien</a>
-	<a href="Content/Venue/conference-dinner.html">Conference Dinner</a>
-	<a href="Content/Venue/restaurants.html">About food</a>
-	</div>
-	</div>
-</td>
-<td class="navigation">
-	<a href="Content/downloads.html">Downloads</a>
-</td>
-</tr>
-</table>
-
-
-
-<!---   TEXTBODY   --------------------------->
-
-<h1>List of participants</h1>
-Here is the list of registered participants.
-<br>
-<br>
-<ol>
 <li>Abdeljawad Ahmed (<em>RICAM, Austria</em>)</li>
 <li>Alexis Michel (<em>University of Bonn, Germany</em>)</li>
 <li>Aslanova Nigar (<em>Azerbaijan University of Architecture and Construction</em>)</li>
@@ -103,7 +31,7 @@ Here is the list of registered participants.
 <li>Liang Dong (<em>York University, Canada</em>)</li>
 <li>Lukić Milivoje (<em>Rice University, USA</em>)</li>
 <li>Ly Hong Hai (<em>University of Ostrava, Czech Republic</em>)</li>
-<li>Malamud Mark</li>
+<li>Malamud Mark</em>)</li>,
 <li>Mantile Andrea (<em>Université de Reims, France</em>)</li>
 <li>Meradjah Ibrahim (<em>Djillali Liabes University, Algeria</em>)</li>
 <li>Moalla Nedra (<em>University of Sfax, Tunisia </em>)</li>
@@ -129,10 +57,3 @@ Here is the list of registered participants.
 <li>Yuditskii Peter (<em>JKU Linz, Austria</em>)</li>
 <li>Zhang Yifan (<em>University of Ostrava, Czech Republic</em>)</li>
 <li>Zinchenko Maxim (<em>University of New Mexico, USA</em>)</li>
-</ol>
-
-
-
-</body>
-</html>
-
